--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".StartPage"
-            android:label="@string/app_name">
+            android:name=".StartPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,8 +21,9 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" />
+            android:name=".MainActivity"/>
+
+        <activity android:name=".Summary"/>
 
     </application>
 
